refactor: extract createDescriptor() helper in AdminCclService.syncIgdbDescriptors()